# mirage_linemode

./: .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  README_ja.md  entry_points.cfg  setup.cfg  setup.py
mirage_linemode/: __init__.py  __main__.py  args.py  config.py  mirage_linemode_ctrl.py  util.py
mirage_linemode/ranger_plugin/: __init__.py  mirage_linemode.py
mirage_linemode/template/: mirage_linemode_theme.yml
mirage_linemode/theme/: core.py  icon_width_list.py
tests/: conftest.py  test_args.py  test_config.py  test_config.yml  test_mirage_linemode_ctrl.py  test_theme.py  test_theme.yml  test_util.py
tests/ranger_plugin/: test_mirage_linemode.py
