[metadata]
name = mirage_linemode
version = 0.1.1
url = https://github.com/hankei6km/mirage_linemode
author = hankei6km
author_email = hankei6km@gmail.com
license = MIT
description = Customizable linemode plugin for ranger.
# long_description is set up from README.rst(converted README.md) in setup.py.
classifiers =
    Development Status :: 2 - Pre-Alpha
    Topic :: Desktop Environment :: File Managers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Environment :: Console
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6

[options]
packages = mirage_linemode, mirage_linemode.theme
entry_points = file: entry_points.cfg
install_requires = configparser; pyxdg; PyYAML

[bdist_wheel]
universal=1

[aliases]
test=pytest

[flake8]
ignore = W503
exclude =
    .git,
    .eggs,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist

[tool:pytest]
minversion = 3.0
testpaths = tests
addopts = --cov mirage_linemode
#mock_traceback_monkeypatch = false
#mock_use_standalone_module = true

# [coveragerc:*] to control coverage.py
[coverage:run]
branch = True
# not effective to pytest-cov.
# Specify `addopts` in `[tool:pytest]`,
# if want to pass source path to pytest-cov.
source = mirage_linemode

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:
show_missing = True
